// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the normal Product component 1`] = `
<div
  class="MuiPaper-root MuiCard-root container MuiPaper-elevation1 MuiPaper-rounded"
  tabindex="1"
>
  <button
    class="MuiButtonBase-root MuiCardActionArea-root action"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
        >
          test
        </span>
      </div>
    </div>
    <div
      class="MuiCardMedia-root media"
      style="background-image: url(/icons/productId.svg);"
    />
    <span
      class="MuiCardActionArea-focusHighlight"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`renders the normal Product component with buy message (with price) 1`] = `
<div
  class="MuiPaper-root MuiCard-root container MuiPaper-elevation1 MuiPaper-rounded"
  tabindex="1"
>
  <button
    class="MuiButtonBase-root MuiCardActionArea-root action"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
        >
          test
        </span>
      </div>
    </div>
    <div
      class="MuiCardMedia-root media"
      style="background-image: url(/icons/productId.svg);"
    />
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Click to buy (
      20
      )
    </p>
    <span
      class="MuiCardActionArea-focusHighlight"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
